--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  mocktail: ^0.3.0
+  faker: ^2.1.0
 
 dev_dependencies:
   flutter_test:
