--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   mocktail: ^0.3.0
   faker: ^2.1.0
   http: ^0.13.5
+  flutter_launcher_icons: ^0.12.0
 
 dev_dependencies:
   flutter_test:
@@ -25,3 +26,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+flutter_icons:
+  ios: true
+  android: true
+  image_path_android: assets/CleanArchitecture.jpeg
+  image_path_ios: assets/CleanArchitecture.jpeg
