--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   http: ^0.13.5
   flutter_launcher_icons: ^0.12.0
   equatable: ^2.0.5
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
