--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_launcher_icons: ^0.12.0
   equatable: ^2.0.5
   get: ^4.6.5
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
