--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   equatable: ^2.0.5
   get: ^4.6.5
   flutter_secure_storage: ^8.0.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
