--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   get: ^4.6.5
   flutter_secure_storage: ^8.0.0
   carousel_slider: ^4.2.1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
