--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   carousel_slider: ^4.2.1
   intl: ^0.18.0
+  localstorage: ^4.0.1+2
 
 dev_dependencies:
   flutter_test:
